[package]
name = "secrets-cafe"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
surrealdb = { version = "1.1.1", features = ["kv-rocksdb", "kv-mem"] }
anyhow = "1.0"
paste = "1.0"
bcrypt = "0.15"
chrono = "0.4"
hmac = "0.12.1"
base64 = "0.21"
sha2 = "0.10.8"
command-engine = { git = "https://github.com/VulcoLibs/command-engine" }

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
