[package]
name = "secrets-cafe"
version = "0.4.0"
edition = "2021"
authors = ["FssAy"]
description = "Website for sharing stories anonymously"
homepage = "https://secrets.cafe"
repository = "https://github.com/FssAy/secrets-cafe"
license = "CC-BY-NC-4.0"
publish = false

[features]
# --- Main features
default = []
cloudflare = ["tls"]
rate-limits = ["limtr"]
# --- Dependencies
tls = [
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
]


[dependencies]
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
surrealdb = { version = "1.1.1", features = ["kv-rocksdb", "kv-mem"] }
anyhow = "1.0"
paste = "1.0"
bcrypt = "0.15"
chrono = "0.4"
hmac = "0.12.1"
base64 = "0.21"
sha2 = "0.10.8"
command-engine = { git = "https://github.com/VulcoLibs/command-engine" }
rand = "0.8.5"
blake3 = "1.5"
limtr = { version = "0.2.0", optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
rustls = { version = "0.22.2", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }

[build-dependencies]
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
